testsuite/tests/typing-abstract-kinds-missing-cmi/test.missing.reference
File "c.ml", line 4, characters 0-32:
4 | type s2 : value mod portable = t
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The kind of type "t" is A.k
         because of the definition of t at file "c.ml", line 1, characters 0-12.
       But the kind of type "t" must be a subkind of value mod portable
         because of the definition of s2 at file "c.ml", line 4, characters 0-32.
